# tempo-tb-ingest

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml  soak.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  Scene.tsx  client.ts  contract.ts  layout.test.ts  layout.ts  palette.ts  reducer.test.ts  reducer.ts  styles.css
deploy/: README.md  tempo-tb-ingest.example.toml  tempo-tb-ingest.service
docs/: dashboard-notes.md  design.md  feasibility.md  implementation-plan.md  windows-options.md
tempo_tb_ingest/: __init__.py  __main__.py  adapters.py  api.py  cli.py  config.py  daemon.py  events.py  flightinfo.py  harvest.py  owners.py  presence.py  promote.py  recorder.py  scanner.py  statefold.py  store.py
tempo_tb_ingest/device/: __init__.py  fake_link.py  protocol.py  smp_link.py  tempo_group.py
tests/: test_adapters.py  test_api.py  test_config.py  test_daemon.py  test_events.py  test_flightinfo.py  test_harvest.py  test_link_contract.py  test_link_destructive.py  test_owners.py  test_presence.py  test_promote.py  test_recorder.py  test_scanner.py  test_smoke.py  test_smp_link_pipeline.py  test_store.py  test_tempo_group.py
tests/fixtures/: live-harvest-20260708.jsonl  state-snapshot.json  synthetic-day.jsonl
tests/fixtures/events/: daemon.started.json  daemon.stopping.json  device.away.json  device.identity_conflict.json  device.lost.json  device.new.json  device.provisioning_needed.json  device.returned.json  device.seen.json  harvest.completed.json  harvest.failed.json  harvest.queued.json  (+16 more)
